--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,9 +2,7 @@
 line-length = 79
 include = '\.pyi?$'
 exclude = '''
-# A regex preceded with ^/ will apply only to files and directories
-# in the root of the project.
-^/(
+  ^/(
   (
       \.eggs
     | \.git
@@ -20,8 +18,8 @@ exclude = '''
     | dist
   )/
   | .*/_version.py
-)
-'''
+  )
+  '''
 
 [tool.isort]
 multi_line_output = 3
@@ -32,7 +30,7 @@ ensure_newline_before_comments = true
 line_length = 79
 
 [tool.pytest.ini_options]
-addopts = "-vv --pikachu --mypy"
+addopts = "-vv --pikachu --mypy --cov=speedbump"
 testpaths = [
     "tests",
-]
+  ]
